# YT-Summary

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  analyze_yt_transcript.py  format_utils.py  formatting.py  handlers.py  justfile  logger_config.yaml  main.py  markdown_writer.py  model.py  my_constants.py  my_logger.py  my_parser.py  my_settings.py  prepare_local_transcript.py  prepare_yt_audio.py  prepare_yt_transcript.py  preprocess_transcript.py  process_yt_transcript.py  pyproject.toml  q_and_a_engine.py  subtitles.py  summarize_transcript.py
.claude/: settings.json
.claude/hooks/: python-quality.sh
.claude/rules/: python_strict.md
src/scriber/: __init__.py  __main__.py  handlers.py  language.py  logger_config.yaml  main.py  parser.py  settings.py
src/scriber/summarizers/: base.py  engine.py  markdown.py  modes.py  openai_compatible.py  openai_summarizer.py  openrouter.py  rag.py
src/scriber/transcription/: local.py  youtube_audio.py  youtube_captions.py
src/yt_summary/: __init__.py  __main__.py  handlers.py  language.py  logger.py  logger_config.yaml  main.py  parser.py
src/yt_summary/summarizers/: __init__.py  base.py  engine.py  markdown.py  modes.py  openai_compatible.py  openai_summarizer.py  openrouter.py  rag.py
src/yt_summary/transcription/: __init__.py  local.py  preprocess.py  youtube_audio.py  youtube_captions.py
summarizers/: __init__.py  base.py  modes.py  openai_compatible.py  openai_summarizer.py  openrouter.py  rag.py
tests/: conftest.py  test_caching.py  test_formatting.py  test_handlers.py  test_language.py  test_main.py  test_markdown_writer.py  test_my_logger.py  test_my_parser.py  test_my_settings.py  test_prepare_local_transcript.py  test_prepare_yt_audio.py  test_prepare_yt_transcript.py  test_preprocess_transcript.py  test_subtitles.py  test_summarize_transcript.py  test_summarizers.py  test_summary_modes.py
tests/integration/: test_transcribe_integration.py
