[project]
name = "yt-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ffmpeg-python>=0.2.0",
    "langdetect>=1.0.9",
    "openai>=1.67.0",
    "openai-whisper>=20240930",
    "ruff>=0.11.0",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.0.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ERA001", "G004", "PIE808", "PD901", "T201", "TD002", "TD003", "S311"]
