[project]
name = "yt-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.4",
    "dotenv>=0.9.9",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.1",
    "langdetect>=1.0.9",
    "numpy>=2.2.4",
    "openai>=1.67.0",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.2",
    "requests>=2.32.3",
    "ruff>=0.11.0",
    "textblob>=0.19.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
    "youtube-transcript-api>=1.0.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ERA001", "G004", "PIE808", "PD901", "T201", "TD002", "TD003", "S311"]
